//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table Account {
  id String [pk]
  userId String [not null]
  type String [not null]
  provider String [not null]
  providerAccountId String [not null]
  refresh_token String
  access_token String
  expires_at Int
  token_type String
  scope String
  id_token String
  session_state String
  user User [not null]

  indexes {
    (provider, providerAccountId) [unique]
  }
}

Table Session {
  id String [pk]
  sessionToken String [unique, not null]
  userId String [not null]
  expires DateTime [not null]
  user User [not null]
}

Table User {
  id String [pk, note: '@zod.custom.omit([model, input])']
  name String
  email String [unique]
  emailVerified DateTime
  image String
  accounts Account [not null]
  sessions Session [not null]
  tenantUsers TenantUser [not null]
  customForms CustomForm [not null]
  customFieldResponses CustomFieldResponse [not null]
}

Table VerificationToken {
  identifier String [not null]
  token String [unique, not null]
  expires DateTime [not null]

  indexes {
    (identifier, token) [unique]
  }
}

Table TenantUser {
  id String [pk]
  role Role [not null, default: 'STAFF']
  tenantId String [not null]
  tenant Tenant [not null]
  userId String [not null]
  user User [not null]
}

Table Client {
  id String [pk]
  name String [not null]
  email String [not null]
  phoneNumber String [unique, not null, note: '@zod.string.regex(new RegExp(/^([+]?[\s0-9]+)?(\d{3}|[(]?[0-9]+[)])?([-]?[\s]?[0-9])+$/), { message:"Invalid Number!"})']
  avatar String
  tenantId String [not null]
  tenant Tenant [not null]
}

Table Tenant {
  id String [pk]
  name String [not null]
  email String
  isAdmin Boolean [not null, default: false]
  clients Client [not null]
  tenantUsers TenantUser [not null]
}

Table CustomForm {
  id Int [pk, increment]
  userId String [not null]
  name String [not null]
  user User [not null]
  createdAt DateTime [default: `now()`, not null]
  fields CustomField [not null]
}

Table CustomField {
  id Int [pk, increment]
  name String [not null]
  type FormFieldType [not null]
  required Boolean [default: true]
  formId Int [not null]
  form CustomForm [not null]
  responses CustomFieldResponse [not null]
}

Table CustomFieldResponse {
  id Int [pk, increment]
  content String [not null]
  userId String [not null]
  user User [not null]
  fieldId Int [not null]
  field CustomField [not null]
  createdAt DateTime [default: `now()`, not null]
}

Enum Role {
  STAFF
  ADMIN
  OWNER
}

Enum FormFieldType {
  TEXT
  NUMBER
  RADIO
  CHECKBOX
}

Ref: Account.userId > User.id [delete: Cascade]

Ref: Session.userId > User.id [delete: Cascade]

Ref: TenantUser.tenantId > Tenant.id [delete: Cascade]

Ref: TenantUser.userId > User.id [delete: Cascade]

Ref: Client.tenantId > Tenant.id

Ref: CustomForm.userId > User.id [delete: Cascade]

Ref: CustomField.formId > CustomForm.id [delete: Cascade]

Ref: CustomFieldResponse.userId > User.id [delete: Cascade]

Ref: CustomFieldResponse.fieldId > CustomField.id [delete: Cascade]